compiler/testData/cli/jvm/javaSrcWrongPackage.out
compiler/testData/cli/jvm/javaSrcWrongPackage.kt:1:24: error: return type mismatch: expected 'A.Nested', actual 'foo.A.Nested!'.
fun test(): A.Nested = A().nested()
                       ^^^^^^^^^^^^
compiler/testData/cli/jvm/javaSrcWrongPackage.kt:1:28: error: cannot access class 'foo.A.Nested'. Check your module classpath for missing or conflicting dependencies.
fun test(): A.Nested = A().nested()
                           ^^^^^^
COMPILATION_ERROR
