compiler/testData/cli/jvm/javaSrcWrongPackage.kt
fun test(): A.Nested = A().nested()
